@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.29 2000-02-26 21:34:39 macgyver Exp $
+$Id: NEWS,v 1.30 2000-02-28 10:14:31 macgyver Exp $
 
 1.2.0 - Released: ???
 ---------------------
@@ -10,6 +10,7 @@ $Id: NEWS,v 1.29 2000-02-26 21:34:39 macgyver Exp $
 - Changed bandwidth throttling to use select() instead of usleep() to work
   better across platforms.
 - Updated mod_ldap to 2.5.2.
+- Environment is now preserved before trying anything fancy with set_proc_title
 
 1.2.0pre10 - Released: 1/17/00
 ------------------------------
